moving to env file and enhanced grafana provisioning

--- a/grafana/provisioning/datasources/datasource.yaml
+++ b/grafana/provisioning/datasources/datasource.yaml
@@ -46,4 +46,5 @@ datasources:
     tlsClientCert: "..."
     tlsClientKey: "..."
   version: 1
-  # <bool> allow u
+  # <bool> allow users to edit datasources from the UI.
+  editable: true
