--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,30 +20,18 @@ services:
       - "8086:8086"
     volumes:
       - influxdb:/var/lib/influxdb
-    environment:
-      #### See https://hub.docker.com/_/influxdb/ (Section - Environment Variables)
-      INFLUXDB_DB: monitoring
-      INFLUXDB_HTTP_AUTH_ENABLED: "true"
-      INFLUXDB_ADMIN_USER: admin
-      INFLUXDB_ADMIN_PASSWORD: sFJVb7jF5xZfKbUm
-      INFLUXDB_USER: monitoring
-      INFLUXDB_USER_PASSWORD: sFJVb7jF5xZfKbUm
+    env_file:
+      - variables.env 
   grafana:
     image: grafana/grafana
     restart: always
     ports:
      - "3000:3000"
+    entrypoint: /etc/grafana/provisioning/entrypoint.sh
     volumes:
       - ./grafana/provisioning/:/etc/grafana/provisioning/
-    environment:
-      #### See http://docs.grafana.org/installation/configuration/ (Section - Using environment variables)
-      #### If proxy needed to download plugins
-      # http_proxy: http://proxy:80
-      # https_proxy: http://proxy:80
-      # no_proxy: influxdb
-      GF_INSTALL_PLUGINS: "jdbranham-diagram-panel"
-      GF_SECURITY_ADMIN_USER: admin
-      GF_SECURITY_ADMIN_PASSWORD: sFJVb7jF5xZfKbUm
+    env_file:
+      - variables.env 
 volumes:
   portainer:
   influxdb:
