--- a/grafana/provisioning/datasource.yaml
+++ b/grafana/provisioning/datasource.yaml
@@ -1,3 +1,7 @@
+#############################################################################################################
+#### THIS FILE IS BEING COPYED TO /etc/grafana/provisioning/datasources/datasource.yaml IN entrypoint.sh ####
+#############################################################################################################
+
 # config file version
 apiVersion: 1
 
@@ -5,8 +9,6 @@ apiVersion: 1
 deleteDatasources:
   - name: InfluxDB
     orgId: 1
-
-#### THIS FILE IS BEING COPYED TO /etc/grafana/provisioning/datasources/datasource.yaml IN entrypoint.sh
 
 # list of datasources to insert/update depending
 # what's available in the database
